--- a/booking.html
+++ b/booking.html
@@ -2,237 +2,188 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Room Booking - Jayvee Hall of Mansion</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Booking - Jayvee Hall of Mansion</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('assets/bgindex.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-      color: #fff;
     }
 
     .booking-container {
-      background: rgba(0, 0, 0, 0.65);
-      padding: 25px 30px;
+      background: rgba(255,255,255,0.95);
+      padding: 30px;
       border-radius: 12px;
-      max-width: 450px;
       width: 90%;
+      max-width: 500px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
       text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
     }
 
-    .booking-container h2 {
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: #333;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background: #555;
+    }
+
+    .success-message {
+      display: none;
+      color: green;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    /* Receipt Preview (hidden for download) */
+    #receipt {
+      display: none;
+      position: relative;
+      width: 500px;
+      padding: 30px;
+      text-align: center;
+      background: url('assets/bgindex.jpg') no-repeat center center/cover;
+      border: 2px solid #333;
+      border-radius: 12px;
+      color: #000;
+    }
+
+    #receipt h3 {
       margin-bottom: 15px;
     }
 
-    .booking-container input, 
-    .booking-container select {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 8px;
-      border: none;
-      font-size: 16px;
-    }
-
-    .booking-container button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 8px;
-      background: #28a745;
-      color: #fff;
-      font-size: 16px;
-      cursor: pointer;
+    #receipt p {
+      margin: 6px 0;
       font-weight: bold;
     }
 
-    .booking-container button:hover {
-      background: #218838;
-    }
-
-    .back-btn {
-      background: #ff9800 !important;
-      margin-top: 10px;
-    }
-
-    .back-btn:hover {
-      background: #e68900 !important;
-    }
-
-    #successMsg {
-      display: none;
-      margin-top: 15px;
-      padding: 12px;
-      border-radius: 8px;
-      font-weight: bold;
-      background: rgba(40,167,69,0.9);
-      color: #fff;
-    }
-
-    .details-box {
-      display: none;
-      background: rgba(255,255,255,0.1);
-      border-radius: 10px;
-      padding: 15px;
-      margin-top: 20px;
-      text-align: left;
-    }
-
-    .details-box h3 {
-      margin-top: 0;
-      color: #ffeb3b;
-    }
-
-    .details-box p {
-      margin: 5px 0;
-      font-size: 15px;
-      color: #fff;
-    }
-
-    .download-btn {
-      width: 100%;
-      padding: 12px;
-      margin-top: 10px;
-      border: none;
-      border-radius: 8px;
-      background: #2196f3;
-      color: #fff;
-      font-size: 16px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .download-btn:hover {
-      background: #0b7dda;
-    }
-
-    @media (max-width: 500px) {
-      .booking-container {
-        padding: 20px;
-      }
-    }
   </style>
 </head>
 <body>
 
-<div class="booking-container fade-in">
-  <h2>Book Your Stay</h2>
-
-  <input type="text" id="fullName" placeholder="Full Name" required>
-  <input type="date" id="bookingDate" required>
-
-  <select id="roomSelect" required>
-    <option value="">Select Room</option>
-    <option value="Room 101 - Deluxe Room">Room 101 - Deluxe Room</option>
-    <option value="Room 102 - Executive Suite">Room 102 - Executive Suite</option>
-    <option value="Room 103 - Family Room">Room 103 - Family Room</option>
-    <option value="Room 104 - Presidential Suite">Room 104 - Presidential Suite</option>
-  </select>
-
-  <button onclick="submitBooking()">Confirm Booking</button>
-  <button class="back-btn" onclick="window.location.href='home.html'">Back to Home</button>
-
-  <div id="successMsg">Your booking request has been submitted!</div>
-
-  <!-- Booking Details Box -->
-  <div class="details-box" id="detailsBox">
-    <h3>Booking Details</h3>
-    <p><strong>Name:</strong> <span id="detailName"></span></p>
-    <p><strong>Room:</strong> <span id="detailRoom"></span></p>
-    <p><strong>Date:</strong> <span id="detailDate"></span></p>
-    <p><strong>Status:</strong> <span id="detailStatus"></span></p>
-    <button class="download-btn" onclick="downloadReceipt()">Download Receipt</button>
+  <div class="booking-container fade-in">
+    <h2>Book Your Stay</h2>
+    <form id="bookingForm">
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="date" id="checkin" required />
+      <input type="date" id="checkout" required />
+      <select id="room" required>
+        <option value="">Select Room</option>
+        <option value="Room 101 - Deluxe Room">Room 101 - Deluxe Room</option>
+        <option value="Room 102 - Executive Suite">Room 102 - Executive Suite</option>
+        <option value="Room 103 - Family Room">Room 103 - Family Room</option>
+        <option value="Room 104 - Presidential Suite">Room 104 - Presidential Suite</option>
+      </select>
+      <button type="submit">Submit Booking</button>
+      <p class="success-message" id="successMessage">Booking submitted! Your receipt is downloading...</p>
+    </form>
   </div>
-</div>
+
+  <!-- Hidden Receipt Template -->
+  <div id="receipt">
+    <h3>Jayvee Hall of Mansion</h3>
+    <p><strong>Booking Receipt</strong></p>
+    <p id="rName"></p>
+    <p id="rEmail"></p>
+    <p id="rPhone"></p>
+    <p id="rRoom"></p>
+    <p id="rCheckin"></p>
+    <p id="rCheckout"></p>
+    <p>Status: Pending</p>
+    <p>Thank you for booking with us!</p>
+  </div>
 
 <script>
-  const { jsPDF } = window.jspdf;
-
-  // Pre-fill room from query string if passed
+  // Prefill room if redirected from home.html
   const urlParams = new URLSearchParams(window.location.search);
-  const selectedRoom = urlParams.get('room');
-  if (selectedRoom) {
-    document.getElementById('roomSelect').value = selectedRoom;
-  }
+  const prefillRoom = urlParams.get('room');
+  if (prefillRoom) document.getElementById('room').value = prefillRoom;
 
-  let lastBooking = null;
-
-  function submitBooking() {
-    const name = document.getElementById('fullName').value.trim();
-    const date = document.getElementById('bookingDate').value;
-    const room = document.getElementById('roomSelect').value;
-
-    if (!name || !date || !room) {
-      alert("Please fill in all booking details.");
-      return;
-    }
+  document.getElementById('bookingForm').addEventListener('submit', async function(e){
+    e.preventDefault();
 
     const booking = {
-      name: name,
-      date: date,
-      room: room,
-      status: "Pending"
+      id: Date.now(),
+      name: document.getElementById('name').value,
+      email: document.getElementById('email').value,
+      phone: document.getElementById('phone').value,
+      checkin: document.getElementById('checkin').value,
+      checkout: document.getElementById('checkout').value,
+      room: document.getElementById('room').value,
+      status: 'Pending'
     };
 
-    // Save to localStorage
-    const bookings = JSON.parse(localStorage.getItem("bookings")) || [];
+    // Save to localStorage for admin.html
+    const bookings = JSON.parse(localStorage.getItem('bookings')) || [];
     bookings.push(booking);
-    localStorage.setItem("bookings", JSON.stringify(bookings));
+    localStorage.setItem('bookings', JSON.stringify(bookings));
 
-    lastBooking = booking;
+    // Prepare Receipt
+    document.getElementById('rName').innerText = "Name: " + booking.name;
+    document.getElementById('rEmail').innerText = "Email: " + booking.email;
+    document.getElementById('rPhone').innerText = "Phone: " + booking.phone;
+    document.getElementById('rRoom').innerText = "Room: " + booking.room;
+    document.getElementById('rCheckin').innerText = "Check-in: " + booking.checkin;
+    document.getElementById('rCheckout').innerText = "Check-out: " + booking.checkout;
 
-    // Show success message
-    document.getElementById("successMsg").style.display = "block";
+    // Show success
+    document.getElementById('successMessage').style.display = 'block';
 
-    // Show details box
-    document.getElementById("detailsBox").style.display = "block";
-    document.getElementById("detailName").innerText = booking.name;
-    document.getElementById("detailRoom").innerText = booking.room;
-    document.getElementById("detailDate").innerText = booking.date;
-    document.getElementById("detailStatus").innerText = booking.status;
+    // Generate PDF Receipt with background
+    const receipt = document.getElementById('receipt');
+    receipt.style.display = 'block'; 
 
-    // Reset form
-    document.getElementById('fullName').value = '';
-    document.getElementById('bookingDate').value = '';
-    document.getElementById('roomSelect').value = '';
-  }
+    const canvas = await html2canvas(receipt);
+    const imgData = canvas.toDataURL('image/png');
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF('p', 'mm', 'a4');
+    const imgProps= pdf.getImageProperties(imgData);
+    const pdfWidth = pdf.internal.pageSize.getWidth();
+    const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+    pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
+    pdf.save(`Booking_Receipt_${booking.id}.pdf`);
 
-  function downloadReceipt() {
-    if (!lastBooking) return;
+    // Hide receipt after download
+    receipt.style.display = 'none';
 
-    const doc = new jsPDF("p", "pt", "a4");
-
-    // Add background image
-    const img = new Image();
-    img.src = 'assets/receiptbg.jpg'; // Replace with your background image path
-    img.onload = function() {
-      doc.addImage(img, 'JPEG', 0, 0, 595, 842); // Full A4 background
-
-      // Overlay booking text
-      doc.setFontSize(22);
-      doc.setTextColor(0, 0, 0);
-      doc.text("Jayvee Hall of Mansion", 180, 120);
-      doc.setFontSize(14);
-      doc.text(`Name: ${lastBooking.name}`, 100, 200);
-      doc.text(`Room: ${lastBooking.room}`, 100, 230);
-      doc.text(`Date: ${lastBooking.date}`, 100, 260);
-      doc.text(`Status: ${lastBooking.status}`, 100, 290);
-      doc.text("Thank you for booking with us!", 100, 350);
-
-      doc.save("Booking_Receipt.pdf");
-    };
-  }
+    // Redirect to home after 3s
+    setTimeout(() => {
+      document.getElementById('bookingForm').reset();
+      window.location.href = 'home.html';
+    }, 3000);
+  });
 </script>
 
 </body>
-                                                          </html>
+</html>
